--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-
-<html>
+<!DOCTYPE html>
+<html lang='en'>
 <head>
      <meta charset="UTF-8"/>
-     <title>Document</title>
+     <title>Lindesay</title>
  </head>
  <body>
      <h1>OI GRUDE!!</h1>
